# datarails-demo

./: .env  INSTRUCTIONS.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 71a240e65e7f_initial.py
backend/config/: config.csv
backend/docker/: Dockerfile  entrypoint.sh
backend/src/backend/: celery_app.py  main.py
backend/src/backend/api/api_v1/: api.py
backend/src/backend/api/api_v1/endpoints/: employees.py  upload.py
backend/src/backend/core/: config.py  utils.py
backend/src/backend/crud/: base.py  employee_crud.py  project_crud.py  upload_job_crud.py
backend/src/backend/db/: base.py  base_class.py  lengths.py  session.py
backend/src/backend/models/: __init__.py  employee.py  model_mixin.py  project.py  upload_job.py
backend/src/backend/schemas/: common.py  employee.py  project.py  upload_job.py
backend/src/backend/services/: config_loader.py  data_transformer.py  data_validator.py  excel_reader.py
backend/src/backend/tasks/: process_upload.py
config/: config.csv
data/: input.xlsx  ~$input.xlsx
frontend/: .env.container  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docker/: Dockerfile  entrypoint.sh  nginx.conf
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/hooks/: index.ts  useEmployees.ts  useJobStatus.ts  useJobs.ts  useUpload.ts
frontend/src/layouts/: RootLayout.tsx
frontend/src/mocks/: README.md  browser.ts  handlers.ts  index.ts  mockData.ts  server.ts
frontend/src/pages/: EmployeesListPage.tsx  JobStatusPage.tsx  JobsListPage.tsx  NotFoundPage.tsx  (+1 more)
(+30 files in other folders)
